Mise à jour des liens github et linked, ajout de la banniere, reglage bug du header et mise a jour du guide sur notion

--- a/src/App.css
+++ b/src/App.css
@@ -106,3 +106,14 @@ main {
     top: 180px;
 }
 
+/* Style pour l'email cliquable */
+.email-link {
+    cursor: pointer;
+    text-decoration: underline;
+    color: #6c757d; /* text-muted */
+}
+
+.email-link:hover {
+    color: #495057;
+}
+
